# ansible_home

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Agents.md  CLAUDE.md  GEMINI.md  MOLECULE_SETUP.md  Makefile  Project Setup.md  README.md  TODO.md  ansible.cfg  bootstrap.sh  fix_readme_md.py  fix_testing_md.py  pyproject.toml  site.yml
.agents/skills/cleanup/: SKILL.md
.agents/skills/mac-workstation-update/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ansible-lint.yml  branch-protection.yml  ci.yml  codeql.yml  dependency-check.yml  dependency-review.yml  gatekeeper.yml  molecule-tests.yml  molecule.yml
docs/: 1PASSWORD_SECURITY.md  GIT_SECURITY.md  PR_APPROVAL_PROCESS.md  TESTING.md  UTM_MACOS_SETUP.md
infrastructure/: Pulumi.yaml  __main__.py
inventory/: hosts.yml  local.yml
inventory/group_vars/: raspberry_pis.yml
playbooks/: github-repo-config.yml  local-linux.yml  local-mac.yml  local-main.yml  raspberry_pis.yml  workstations.yml
roles/docker/defaults/: main.yml
roles/docker/tasks/: main.yml
roles/github/defaults/: main.yml
roles/github/tasks/: main.yml
roles/home_assistant_remote/defaults/: main.yml
roles/home_assistant_remote/tasks/: main.yml
roles/localhost/files/: zshrc-mac
roles/localhost/handlers/: main.yml
roles/localhost/molecule/: Dockerfile.base
roles/localhost/molecule/default/: converge.yml  molecule.yml  prepare.yml
roles/localhost/molecule/default/reports/: pytest_report.html
roles/localhost/molecule/default/tests/: test_default.py
roles/localhost/molecule/idempotence/: converge.yml  molecule.yml  prepare.yml
roles/localhost/molecule/idempotence/reports/: pytest_report.html
roles/localhost/molecule/idempotence/tests/: test_idempotence.py
roles/localhost/molecule/linux/: converge.yml  molecule.yml  prepare.yml
roles/localhost/molecule/linux-fast/: converge.yml  molecule.yml
roles/localhost/molecule/linux-fast/tests/: test_linux_specific.py
roles/localhost/molecule/linux/reports/: pytest_report.html
roles/localhost/molecule/linux/tests/: test_linux_specific.py
roles/localhost/molecule/macos/: converge.yml  create.yml  destroy.yml  molecule.yml
roles/localhost/molecule/macos/tests/: test_macos_specific.py
roles/localhost/tasks/: 1password-security.yml  local-linux.yml  local-mac.yml  zprofile-mac  zshrc-linux  zshrc-linux.j2  zshrc-mac
roles/raspberry_pi/defaults/: main.yml
roles/raspberry_pi/tasks/: main.yml
roles/workstation/molecule/: Dockerfile.base
roles/workstation/molecule/default/: converge.yml  molecule.yml  prepare.yml
roles/workstation/molecule/idempotence/: converge.yml  molecule.yml  prepare.yml
roles/workstation/molecule/linux/: converge.yml  molecule.yml  prepare.yml
roles/workstation/molecule/linux-fast/: converge.yml  molecule.yml
roles/workstation/molecule/macos/: converge.yml  molecule.yml
roles/workstation/molecule/macos/tests/: test_macos_specific.py
roles/workstation/tasks/: 1password-security.yml  gemini-setup.yml  install-oh-my-zsh.yml  local-linux-packages.yml  local-linux-shell.yml  local-linux.yml  local-mac.yml  main.yml  setup-git.yml  zprofile-linux  zprofile-mac  zshenv-linux  zshenv-mac  zshrc-linux  zshrc-mac
scripts/: check_updates.py  utm-macos-test.sh
tests/: test_infrastructure.py  test_infrastructure_pulumi.py
