[project]
name = "ansible_home"
version = "0.1.0"
description = ""
authors = [
    {name = "David Snider",email = "david@davidsnider.org"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ansible (>=13.5.0,<14.0.0)",
    "hvac (>=2.3.0,<3.0.0)",
    "pulumi-github (>=6.7.3,<7.0.0)",
    "pulumi (>=3.190.0,<4.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.uv]
managed = true
package = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
detect-secrets = "^1.5.0"
ansible-lint = "^25.8.2"
molecule = "^6.0.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.0"}
pytest = "^9.0.3"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "roles/workstation/molecule",
    "tests"
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["roles"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/molecule/*/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
